--- a/style.css
+++ b/style.css
@@ -31,10 +31,12 @@ header a {
   display: block;
   padding: 1em;
   color: white;
+  transition: 0.5s ease;
 }
 
 .header a:hover {
-  background-color: #1d90b9;
+  color: #1d90b9;
+  transition: 0.5s ease;
 }
 
 /* @media all and (max-width: 800px) {
